--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
                      <section class="row" style="padding:10px 0;">
                         <div class="large-12 columns" style="padding-top:0;">
                            <div id="content">
-                              
+
 
 <div class="paragraph">
 <p>First get yourself setup with <a href="http://docs.python-guide.org/en/latest/dev/virtualenvs/">Virtual Env</a> so we don&#8217;t break any other Python stuff you have on your machine. After you&#8217;ve got that installed let&#8217;s setup an environment for our app:</p>
@@ -273,7 +273,7 @@ Cleaning up...</code></pre>
 <div class="listingblock">
 <div class="content code-panel" style="width: 100%; height: auto; border: medium 1px;">
 <pre style="font-size: 16px; font-weight: 100;"  class="code programlisting cm-s-neo"><code>(cypher-app)$ python example.py
-Bottle v0.12.7 server starting up (using WSGIRefServer())...
+Bottle starting up
 Listening on http://127.0.0.1:8080/
 Hit Ctrl-C to quit.</code></pre>
 </div>
