--- a/static/index.html
+++ b/static/index.html
@@ -2,7 +2,23 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="http://neo4j-contrib.github.io/developer-resources/language-guides/assets/css/main.css">
-    <title>Neo4j Movies</title>
+    <title>Protein Query</title>
+    <style>       
+    .nodes circle {
+        stroke: #fff;
+        stroke-width: 1.5px;
+    }
+    .protein {
+        fill:pink;
+        r:20;
+    }
+
+    .domain {
+        fill: linen;
+    }
+
+
+    </style>
 </head>
 
 <body>
@@ -16,7 +32,7 @@
                     <li>
                         <form role="search" class="navbar-form" id="search">
                             <div class="form-group">
-                                <input type="text" value="Matrix" placeholder="Search for Movie Title" class="form-control" name="search">
+                                <input type="text" value="" placeholder="Search for Protein Name" class="form-control" name="search">
                             </div>
                             <button class="btn btn-default" type="submit">Search</button>
                         </form>
@@ -30,7 +46,7 @@
                     </a>
                 </div>
                 <div class="navbar-brand">
-                    <div class="brand">Neo4j Movies</div>
+                    <div class="brand">Protein Query</div>
                 </div>
             </div>
         </div>
@@ -44,9 +60,9 @@
             <table id="results" class="table table-striped table-hover">
                 <thead>
                 <tr>
-                    <th>Movie</th>
-                    <th>Released</th>
-                    <th>Tagline</th>
+                    <th>Name</th>
+                    <th>isE</th>
+                    <th>EC Number</th>
                 </tr>
                 </thead>
                 <tbody>
@@ -56,14 +72,11 @@
     </div>
     <div class="col-md-7">
         <div class="panel panel-default">
-            <div class="panel-heading" id="title">Details</div>
+            <div class="panel-heading" id="name">Details</div>
             <div class="row">
-                <div class="col-sm-4 col-md-4">
-                    <img src="" class="well" id="poster"/>
-                </div>
                 <div class="col-md-8 col-sm-8">
-                    <h4>Crew</h4>
-                    <ul id="crew">
+                    <h4>Domains</h4>
+                    <ul id="domains">
                     </ul>
                 </div>
             </div>
@@ -81,15 +94,15 @@
 <script src="http://d3js.org/d3.v3.min.js" type="text/javascript"></script>
 <script type="text/javascript">
     $(function () {
-        function showMovie(title) {
-            $.get("/protein/" + encodeURIComponent(title),
+        function showProtein(name) {
+            $.get("/protein/" + encodeURIComponent(name),
                     function (data) {
                         if (!data) return;
-                        $("#title").text(data.title);
-                        $("#poster").attr("src","http://neo4j-contrib.github.io/developer-resources/language-guides/assets/posters/"+encodeURIComponent(data.title)+".jpg");
-                        var $list = $("#crew").empty();
-                        data.cast.forEach(function (cast) {
-                            $list.append($("<li>" + cast.name + " " +cast.job + (cast.job == "acted"?" as " + cast.role : "") + "</li>"));
+                        $("#name").text(data.name);
+                        var $list = $("#domains").empty();
+                        data.domains.forEach(function (domains) {
+                            //$list.append($("<li>" + cast.name + " " +cast.job + (cast.job == "acted"?" as " + cast.role : "") + "</li>"));
+                            $list.append($("<li>" + domains + "</li>"));
                         });
                     }, "json");
             return false;
@@ -100,18 +113,15 @@
                     function (data) {
                         var t = $("table#results tbody").empty();
                         if (!data || data.length == 0) return;
-                        data.forEach(function (row) {
-                            var movie = row.movie;
-                            $("<tr><td class='movie'>" + movie.title + "</td><td>" + movie.released + "</td><td>" + movie.tagline + "</td></tr>").appendTo(t)
-                                    .click(function() { showMovie($(this).find("td.movie").text());})
-                        });
-                        showMovie(data[0].movie.title);
+                        $("<tr><td class='protein'>" + data.name + "</td><td>" + data.name + "</td><td>" + data.name + "</td></tr>").appendTo(t)
+                                    .click(function() { showProtein($(this).find("td.protein").text());})
+                        showProtein(data);
                     }, "json");
             return false;
         }
 
         $("#search").submit(search);
-        search();
+        //search();
     })
 </script>
 
@@ -126,7 +136,7 @@
             .attr("pointer-events", "all");
 
     d3.json("/graph", function(error, graph) {
-		if (error) return;
+        if (error) return;
 
         force.nodes(graph.nodes).links(graph.links).start();
 
@@ -142,8 +152,8 @@
                 .call(force.drag);
 
         // html title attribute
-        node.append("title")
-                .text(function (d) { return d.title; })
+        node.append("name")
+                .text(function (d) { return d.name; })
 
         // force feed algo ticks
         force.on("tick", function() {
